Implement autotests
